# final_mn

./: Final_MN.ipynb  Main.cpp  Matrix.cpp  Matrix.h  README.md  Untitled.ipynb
.ipynb_checkpoints/: Final_MN-checkpoint.ipynb
Caldeira_Leggett/: CMakeLists.txt  Matrix.h  aux.cpp  global.h  main.cpp  time_evol.cpp  time_evol.h  utils.cpp  utils.h
src/: CMakeLists.txt  aux.c  aux.cpp  aux.h  main.cpp  time_evol.cpp
src/src/: aux.cpp  aux.h  main.cpp  matrix.h
