# CMakeList.txt : CMake project for Caldeira_Leggett, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project ("Caldeira_Leggett")

# Add source to this project's executable.
add_executable (Caldeira_Leggett main.cpp aux.cpp "time_evol.cpp" "time_evol.h" "global.h" "findiff.cpp" "findiff.h")

add_compile_options(${PROJECT_NAME} -Wall -O3)

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET Caldeira_Leggett PROPERTY CXX_STANDARD 20)
endif()

# TODO: Add tests and install targets if needed.
